# MedChemFlashcards

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  LICENSES.md  OBJECTIVES.md  PLAN.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  pages.yml
content/amino-acid-side-chains/: alanine-sidechain.yaml  arginine-sidechain.yaml  asparagine-sidechain.yaml  aspartate-sidechain.yaml  cysteine-sidechain.yaml  deck.yaml  glutamate-sidechain.yaml  glutamine-sidechain.yaml  glycine-sidechain.yaml  histidine-sidechain.yaml  isoleucine-sidechain.yaml  leucine-sidechain.yaml  lysine-sidechain.yaml  methionine-sidechain.yaml  phenylalanine-sidechain.yaml  proline-sidechain.yaml  serine-sidechain.yaml  threonine-sidechain.yaml  tryptophan-sidechain.yaml  tyrosine-sidechain.yaml  valine-sidechain.yaml
content/aromatic-heterocycles/: azaindole.yaml  benzimidazole.yaml  benzofuran.yaml  benzothiophene.yaml  deck.yaml  furan.yaml  imidazole.yaml  indole.yaml  isoquinoline.yaml  oxazole.yaml  pyrazine.yaml  pyrazole.yaml  pyridazine.yaml  pyridine.yaml  pyrimidine.yaml  pyrrole.yaml  quinoline.yaml  thiadiazole.yaml  thiazole.yaml  thiophene.yaml  triazine.yaml  triazole-123.yaml  triazole-124.yaml
content/bioisosteres/: acyl-sulfonamide.yaml  bicyclopentane.yaml  cyclobutyl.yaml  cyclopropyl.yaml  deck.yaml  difluoromethyl.yaml  gem-difluoro.yaml  oxadiazole-124.yaml  oxetane.yaml  sulfoximine.yaml  tetrazole.yaml
content/common-functional-groups/: acetal.yaml  aldehyde.yaml  alkyl-halide.yaml  amide.yaml  amidine.yaml  anhydride.yaml  aryl-halide.yaml  azide.yaml  azo.yaml  boronic-acid.yaml  carbamate.yaml  carbonate.yaml  carboxylic-acid.yaml  deck.yaml  disulfide.yaml  enamine.yaml  enol.yaml  ester.yaml  ether.yaml  guanidine.yaml  hydrazine.yaml  hydroxamic-acid.yaml  hydroxyl.yaml  imide.yaml  imine.yaml  ketone.yaml  n-oxide.yaml  nitrile.yaml  nitro.yaml  oxime.yaml  phenol.yaml  primary-amine.yaml  secondary-amine.yaml  sulfide.yaml  sulfonamide.yaml  sulfone.yaml  sulfoxide.yaml  tertiary-amine.yaml  thioester.yaml  thiol.yaml  (+1 more)
content/halogen-fluorine-motifs/: alkyl-fluoride.yaml  aryl-bromide.yaml  aryl-chloride.yaml  aryl-fluoride.yaml  aryl-iodide.yaml  deck.yaml  (+3 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
schema/: card-content.json  deck-meta.json  enriched-card.json
tests/: conftest.py  test_api.py  test_auth.py  test_chem.py  test_export_static.py  test_loader.py  test_pipeline.py  test_schema.py  test_smoke.py
(+118 files in other folders)
